--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #000217;
+    background-color: #080a25;
 }
 h2 {
     animation: fadeIn 1.5s ease-in-out;
